Fix double scroll on Firefox

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -92,7 +92,7 @@ footer {
         content: url(../../assets/images/footer-contact.png);
         font-size: 24rem;
         font-weight: 900;
-        height: 30rem;
+        height: 34rem;
         @include opacity(0.75);
         position: absolute;
         right: 2.5rem;
